# mbed-aws-client

./: .gitmodules  .mbedignore  AWSClient.cpp  AWSClient.h  CMakeLists.txt  LICENSE  README.md  mbed_lib.json
config/: core_mqtt_config.h  defender_config.h  logging_config.h
test/: AWSClientTest.cpp  CMakeLists.txt  MQTT_mock.cpp  creds.c
